<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="#f0f0f0"
    tools:context=".views.fragments.BcoreControllerFragment">


    <LinearLayout
        style="@style/ControlLayoutMotor"
        android:id="@+id/motor_layout_left"
        >

        <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
            android:id="@+id/vseek_mot0"
            style="@style/ControlVSeekBase"
            app:vseekbarType="@integer/seekbarview_type_motor"
            app:vseekbarIndex="0"
            />

        <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
            android:id="@+id/vseek_mot2"
            style="@style/ControlVSeekBase"
            app:vseekbarType="@integer/seekbarview_type_motor"
            app:vseekbarIndex="2"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/battery_info_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/servo_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
                style="@style/ControlVSeekBase"
                app:vseekbarType="@integer/seekbarview_type_servo"
                android:id="@+id/vseek_srv0"
                app:vseekbarIndex="0"
                />

            <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
                style="@style/ControlVSeekBase"
                app:vseekbarType="@integer/seekbarview_type_servo"
                android:id="@+id/vseek_srv1"
                app:vseekbarIndex="1"
                />

            <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
                style="@style/ControlVSeekBase"
                app:vseekbarType="@integer/seekbarview_type_servo"
                android:id="@+id/vseek_srv2"
                app:vseekbarIndex="2"
                />

            <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
                style="@style/ControlVSeekBase"
                app:vseekbarType="@integer/seekbarview_type_servo"
                android:id="@+id/vseek_srv3"
                app:vseekbarIndex="3"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <ToggleButton
                style="@style/PortOutToggle"
                android:id="@+id/toggle_po0"
                android:textOff="@string/text_po0_name"
                android:textOn="@string/text_po0_name"
                />

            <ToggleButton
                style="@style/PortOutToggle"
                android:id="@+id/toggle_po1"
                android:textOff="@string/text_po1_name"
                android:textOn="@string/text_po1_name"
                android:visibility="invisible"
                />

            <ToggleButton
                style="@style/PortOutToggle"
                android:id="@+id/toggle_po2"
                android:textOff="@string/text_po2_name"
                android:textOn="@string/text_po2_name"
                android:visibility="invisible"
                />

            <ToggleButton
                style="@style/PortOutToggle"
                android:id="@+id/toggle_po3"
                android:textOff="@string/text_po3_name"
                android:textOn="@string/text_po3_name"
                android:visibility="invisible"
                />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        style="@style/ControlLayoutMotor"
        android:id="@+id/motor_layout_right"
        >

        <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
            android:id="@+id/vseek_mot3"
            style="@style/ControlVSeekBase"
            app:vseekbarType="@integer/seekbarview_type_motor"
            app:vseekbarIndex="3"
            />

        <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
            android:id="@+id/vseek_mot1"
            style="@style/ControlVSeekBase"
            app:vseekbarType="@integer/seekbarview_type_motor"
            app:vseekbarIndex="1"
            />

    </LinearLayout>

</LinearLayout>
