<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.BcoreSettingFragment">
    android:rowCount="2"
    android:columnCount="2"
    android:padding="5dp"
    >

    <android.support.v7.widget.GridLayout
        android:id="@+id/grid_setting_servo"
        app:layout_row="0"
        app:layout_rowSpan="2"
        app:layout_column="0"
        app:rowCount="5"
        app:columnCount="5"
        app:layout_columnWeight="3"
        app:layout_gravity="fill"
        >

        <TextView
            style="@style/SettingTextView"
            app:layout_row="1"
            app:layout_column="0"
            android:text="@string/text_setting_show"
            app:layout_gravity="center"
            app:layout_columnWeight="1"
            />

        <TextView
            style="@style/SettingTextView"
            app:layout_row="2"
            app:layout_column="0"
            android:text="@string/text_setting_flip"
            app:layout_gravity="center"
            app:layout_columnWeight="1"
            />

        <TextView
            style="@style/SettingTextView"
            app:layout_row="3"
            app:layout_column="0"
            app:layout_gravity="center"
            android:text="@string/text_setting_sync"
            app:layout_columnWeight="1"
            />

        <TextView
            style="@style/SettingTextView"
            app:layout_row="4"
            app:layout_column="0"
            app:layout_gravity="center"
            android:text="@string/text_setting_trim"
            app:layout_columnWeight="1"
            />

        <TextView
            android:id="@+id/text_setting_srv1"
            style="@style/SettingTextView"
            app:layout_row="0"
            app:layout_column="1"
            app:layout_gravity="center"
            android:text="@string/text_srv0_name"
            app:layout_columnWeight="1"
            />

        <TextView
            android:id="@+id/text_setting_srv2"
            style="@style/SettingTextView"
            app:layout_row="0"
            app:layout_column="2"
            app:layout_gravity="center"
            android:text="@string/text_srv1_name"
            app:layout_columnWeight="1"
            />

        <TextView
            android:id="@+id/text_setting_srv3"
            style="@style/SettingTextView"
            app:layout_row="0"
            app:layout_column="3"
            android:text="@string/text_srv2_name"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <TextView
            android:id="@+id/text_setting_srv4"
            style="@style/SettingTextView"
            app:layout_row="0"
            app:layout_column="4"
            android:text="@string/text_srv3_name"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <ToggleButton
            android:id="@+id/sw_setting_show_srv0"
            style="@style/SettingToggle"
            android:checked="true"
            app:layout_row="1"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <ToggleButton
            style="@style/SettingToggle"
            android:id="@+id/sw_setting_flip_srv0"
            app:layout_row="2"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
            android:id="@+id/vseek_setting_trim_srv0"
            app:layout_column="1"
            app:layout_row="4"
            app:vseekbarIndex="0"
            app:vseekbarType="@integer/seekbarview_type_servo"
            app:vseekbarLableVisible="false"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            />

        <ToggleButton
            style="@style/SettingToggle"
            android:id="@+id/sw_setting_show_srv1"
            app:layout_row="1"
            app:layout_column="2"
            android:checked="true"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <ToggleButton
            style="@style/SettingToggle"
            android:id="@+id/sw_setting_flip_srv1"
            app:layout_row="2"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <ToggleButton
            style="@style/SettingToggle"
            android:id="@+id/sw_setting_sync_srv1"
            app:layout_row="3"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
            android:id="@+id/vseek_setting_trim_srv1"
            app:layout_column="2"
            app:vseekbarIndex="1"
            app:layout_row="4"
            app:vseekbarType="@integer/seekbarview_type_servo"
            app:vseekbarLableVisible="false"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            />

        <ToggleButton
            style="@style/SettingToggle"
            android:id="@+id/sw_setting_show_srv2"
            app:layout_row="1"
            app:layout_column="3"
            android:checked="true"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <ToggleButton
            style="@style/SettingToggle"
            android:id="@+id/sw_setting_flip_srv2"
            app:layout_row="2"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <ToggleButton
            style="@style/SettingToggle"
            android:id="@+id/sw_setting_sync_srv2"
            app:layout_row="3"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
            android:id="@+id/vseek_setting_trim_srv2"
            app:layout_column="3"
            app:vseekbarIndex="2"
            app:layout_row="4"
            app:vseekbarType="@integer/seekbarview_type_servo"
            app:vseekbarLableVisible="false"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            />

        <ToggleButton
            android:id="@+id/sw_setting_show_srv3"
            style="@style/SettingToggle"
            app:layout_row="1"
            app:layout_column="4"
            android:checked="true"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <ToggleButton
            android:id="@+id/sw_setting_flip_srv3"
            style="@style/SettingToggle"
            app:layout_row="2"
            app:layout_column="4"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <ToggleButton
            android:id="@+id/sw_setting_sync_srv3"
            style="@style/SettingToggle"
            app:layout_row="3"
            app:layout_column="4"
            app:layout_columnWeight="1"
            app:layout_gravity="center"
            />

        <net.shaga_workshop.bcoredriverforandroid.views.controls.BcoreSeekBarView
            android:id="@+id/vseek_setting_trim_srv3"
            app:layout_column="4"
            app:vseekbarIndex="3"
            app:layout_row="4"
            app:vseekbarType="@integer/seekbarview_type_servo"
            app:vseekbarLableVisible="false"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            />


    </android.support.v7.widget.GridLayout>

    <LinearLayout
        app:layout_row="0"
        app:layout_column="1"
        app:layout_rowWeight="1"
        app:layout_columnWeight="2"
        android:orientation="vertical"
        app:layout_gravity="fill_horizontal"
        >

        <TextView
            style="@style/SettingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/text_setting_name"/>
        <EditText
            android:id="@+id/edit_bcore_name"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        app:layout_row="1"
        app:layout_column="1"
        app:layout_rowWeight="8"
        app:layout_columnWeight="2"
        android:orientation="vertical"
        app:layout_gravity="fill"
        android:gravity="center"
        >

        <android.support.v7.widget.GridLayout
            android:id="@+id/grid_setting_port_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rowCount="2"
            app:columnCount="5"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/text_setting_po1"
                style="@style/SettingTextView"
                app:layout_row="0"
                app:layout_column="1"
                android:text="@string/text_po0_name"
                app:layout_gravity="center"
                />

            <TextView
                android:id="@+id/text_setting_po2"
                style="@style/SettingTextView"
                app:layout_row="0"
                app:layout_column="2"
                android:text="@string/text_po1_name"
                app:layout_gravity="center"
                />

            <TextView
                android:id="@+id/text_setting_po3"
                style="@style/SettingTextView"
                app:layout_row="0"
                app:layout_column="3"
                android:text="@string/text_po2_name"
                app:layout_gravity="center"
                />

            <TextView
                android:id="@+id/text_setting_po4"
                style="@style/SettingTextView"
                app:layout_row="0"
                app:layout_column="4"
                android:text="@string/text_po3_name"
                app:layout_gravity="center"
                />

            <TextView
                style="@style/SettingTextView"
                app:layout_row="1"
                app:layout_column="0"
                android:text="Show:"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_show_po0"
                style="@style/SettingToggleChecked"
                app:layout_row="1"
                app:layout_column="1"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_show_po1"
                style="@style/SettingToggleChecked"
                app:layout_row="1"
                app:layout_column="2"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_show_po2"
                style="@style/SettingToggleChecked"
                app:layout_row="1"
                app:layout_column="3"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_show_po3"
                style="@style/SettingToggleChecked"
                app:layout_row="1"
                app:layout_column="4"
                app:layout_gravity="center"
                />

        </android.support.v7.widget.GridLayout>

        <android.support.v7.widget.GridLayout
            android:id="@+id/grid_setting_motor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rowCount="3"
            app:columnCount="5">

            <TextView
                android:id="@+id/text_setting_mot1"
                style="@style/SettingTextView"
                app:layout_row="0"
                app:layout_column="1"
                android:text="Mot1"
                app:layout_gravity="center"
                />

            <TextView
                android:id="@+id/text_setting_mot2"
                style="@style/SettingTextView"
                app:layout_row="0"
                app:layout_column="2"
                android:text="Mot2"
                app:layout_gravity="center"
                />

            <TextView
                android:id="@+id/text_setting_mot3"
                style="@style/SettingTextView"
                app:layout_row="0"
                app:layout_column="3"
                android:text="Mot3"
                app:layout_gravity="center"
                />

            <TextView
                android:id="@+id/text_setting_mot4"
                style="@style/SettingTextView"
                app:layout_row="0"
                app:layout_column="4"
                android:text="Mot4"
                app:layout_gravity="center"
                />

            <TextView
                style="@style/SettingTextView"
                app:layout_row="1"
                app:layout_column="0"
                android:text="Show:"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_show_mot0"
                style="@style/SettingToggleChecked"
                app:layout_row="1"
                app:layout_column="1"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_show_mot1"
                style="@style/SettingToggleChecked"
                app:layout_row="1"
                app:layout_column="2"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_show_mot2"
                style="@style/SettingToggleChecked"
                app:layout_row="1"
                app:layout_column="3"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_show_mot3"
                style="@style/SettingToggleChecked"
                app:layout_row="1"
                app:layout_column="4"
                app:layout_gravity="center"
                />

            <TextView
                style="@style/SettingTextView"
                app:layout_row="2"
                app:layout_column="0"
                android:text="Flip:"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_flip_mot0"
                style="@style/SettingToggle"
                app:layout_row="2"
                app:layout_column="1"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_flip_mot1"
                style="@style/SettingToggle"
                app:layout_row="2"
                app:layout_column="2"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_flip_mot2"
                style="@style/SettingToggle"
                app:layout_row="2"
                app:layout_column="3"
                app:layout_gravity="center"
                />

            <ToggleButton
                android:id="@+id/sw_setting_flip_mot3"
                style="@style/SettingToggle"
                app:layout_row="2"
                app:layout_column="4"
                app:layout_gravity="center"
                />


        </android.support.v7.widget.GridLayout>


    </LinearLayout>

</android.support.v7.widget.GridLayout>


